28 February 2025
Bug fixed: a*b*c:(a*b*c ?)*?z&!z:1
Before the fix, z would contain c and this expression would fail.

11 December 2024
sys$ only returns 0 if successful.

10 November 2024
Fixed bug in SortMOP. Neutral elements:  
   neutral element   associative operator
           0                +
           1                *
     empty string       white space
were not handled correctly.

4 November 2024
Allow / in unquoted HTML(5) attribute, even if followed by >

3 November 2024
Added test in `for' loop.

1 November 2024
Changed &apos; to &#39; in toML function, since &apos; is not a valid HTML
entity.

13 September 2024
Fixed bug in mop$: If function called by mop$ returned an expression with the
operator that is specified as input operator, this expression was transformed
as well (only the last returned value, though). This could lead to erratic
behaviour.

26 August 2024
lst$ function fails if given a symbol without a binding.

15 August 2024
Fixed bug in yesterday's new code (mop$ function).

14 August 2024
map$, mop$ and vap$ functions can take empty string as `map function'. Result:
elements passed on unchanged.
mop$ does (merge) sort output if the separating operator in the output list
is + or *.

9 August 2024
(minor change) Moved binary | (OR) operation out of loop in mop$ function.

8 August 2024
The mop$ function can take an extra argument that indicates the operator to be
used to separate the elements in the output.

1 August 2024
tme$ function gives local time. tme$GMT gives UTC (Coordinated Universal Time).
Output contains all fields in C's tm struct, but with month, year, day of the
week day and day of the year given in conventional ranges instead of starting
from 0. 

25 July 2024
UFP export function accepts more formats: "%f" or F, %a or H, N, Q and %e or R. 

25 January 2024
toML function: Removed the space before the slash in empty tags (void elements).
nestML function: If a </html> tag is present, make sure there also is a <html> tag