@@ -1,3 +1,7 @@
+28 March 2025
+Fixed: Numbers containing dot (new since UFP objects) were not properly matched
+during string match.
+
 28 February 2025
 Bug fixed: a*b*c:(a*b*c ?)*?z&!z:1
 Before the fix, z would contain c and this expression would fail.
